# DafelHub

./: .env.example  .env.integrated  .gitignore  .lighthouserc.js  CONTEXT_TRANSFER.json  DEPLOYMENT-COMPLETE.md  Dockerfile  Gemfile  MIGRATION_LOG.md  MIGRATION_MASTER_PLAN.md  ORCHESTRATOR_CONTEXT_SYSTEM.md  PROGRESS_TRACKER.json  README.md  _config.yml  agents.html  connection-manager.js  deploy-pages.sh  deploy.sh  design-system-demo.html  design-system-theme.js  design-system-utilities.css  design-system.css  docker-compose.yml  enterprise-vault-manager.js  index.html  interactive-components-demo.html  mkdocs.yml  package.json  parallel-system.html  pyproject.toml  requirements.txt  studio-demo.html  studio.html  tailwind.config.js  test_basic.py  test_postgresql_integration.py  vault-manager.js
.github/workflows/: build-optimization.yml  deploy-pages.yml  deploy.yml  lighthouserc.js  performance-ci.yml
api/: index.js
assets/: README.md  animation-demo.html  animations.css  animations.js  app.js  dashboard.js  integration-example.html
docs/: index.md
docs/api/: parallel-agents.js
docs/business/: executive-positioning.md  market-positioning-strategy.md
docs/config/: massive-config.json
docs/monitor/: real-time-monitor.html
memory/: constitution.md
public/: executive-landing.html  performance-dashboard.html  roi-calculator-enhanced.html  roi-calculator.html  sw.js
public/js/: performance-monitor.js  performance-optimizer.js  realtime-dashboard.js
scripts/: performance-test.js
src/: README.md  package.json  tsconfig.json
src/components/: AdminPanel.tsx  AuthComponents.tsx  DashboardComponents.tsx  InteractiveElements.tsx  InteractiveShowcase.tsx  index.ts
src/components/hooks/: useAPI.ts  useAuth.ts  useRealTime.ts
src/components/studio/: AIModelsManager.tsx  AnalyticsDashboard.tsx  Canvas.tsx  DafelStudio.tsx  DataSourcesManager.tsx  SettingsPanel.tsx  TestingInterface.tsx  index.ts
src/components/utils/: api.ts  validation.ts
src/dafelhub/: __init__.py
src/dafelhub/api/: README.md  main.py  middleware.py
src/dafelhub/api/models/: __init__.py  requests.py  responses.py
src/dafelhub/cli/: __init__.py  main.py
src/dafelhub/core/: config.py  connections.py  encryption.py  enterprise_vault.py  logging.py
src/dafelhub/database/: README.md  __init__.py  backup_system.py  connection_manager.py  health_monitor.py  init_database.py  migration_system.py  models.py  query_builder.py  schema_discovery.py  security_integration.py
src/dafelhub/monitoring/: __init__.py  alerting.py  dashboard.py  logger.py  metrics_collector.py  profiler.py  realtime_agent.py  realtime_server.py
src/dafelhub/security/: README.md  __init__.py  api_example.py  audit.py  audit_trail.py  authentication.py  config_backup.py  demo_recovery_system.py  jwt_manager.py  key_recovery.py  mfa_system.py  models.py  rbac.py  rbac_system.py  recovery_system.py  test_security_system.py
src/dafelhub/services/: __init__.py  agent_orchestrator.py  deployment_service.py  monitoring_service.py  project_manager.py  spec_manager.py  template_engine.py
tests/: conftest.py
tests/database/: test_postgresql_connector.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_core_config.py  test_database_connections.py  test_security_authentication.py
(+26 files in other folders)
